clean code and fix z-index

--- a/djsuperadmin/src/scss/style.scss
+++ b/djsuperadmin/src/scss/style.scss
@@ -1,51 +1,51 @@
-.djsuperadmin-content{
-    border:2px #ff5050 dotted;
-    border-radius: 6px
+.djsuperadmin-content {
+  border: 2px #ff5050 dotted;
+  border-radius: 6px;
 }
-.djsuperadmin-background{
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 100vh;
-    background: #4a4a4aa1;
+.djsuperadmin-background {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background: #4a4a4aa1;
 }
-.djsuperadmin-logout{
-    position: fixed;
-    top: 15px;
-    right: 15px;
-    background: black;
-    color: white;
-    text-decoration: none;
-    border-radius: 15px;
-    font-size: large;
-    font-family: monospace;
-    padding: 10px;
-    z-index: 10000;
+.djsuperadmin-logout {
+  position: fixed;
+  top: 15px;
+  right: 15px;
+  background: black;
+  color: white;
+  text-decoration: none;
+  border-radius: 15px;
+  font-size: large;
+  font-family: monospace;
+  padding: 10px;
+  z-index: 100000000000;
 }
-.djsuperadmin-editor{
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 35rem;
-    height: 20rem;
+.djsuperadmin-editor {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 35rem;
+  height: 20rem;
 }
-.djsuperadmin-save{
-    background: #78a6e4;
-    color: white;
-    font-family: monospace;
-    padding: .5rem;
-    border: 1px solid;
-    border-radius: 1rem;
-    left: 50%;
-    position: absolute;
-    transform: translateX(-50%);
-    margin-top: 1rem;
-    cursor: pointer;
+.djsuperadmin-save {
+  background: #78a6e4;
+  color: white;
+  font-family: monospace;
+  padding: 0.5rem;
+  border: 1px solid;
+  border-radius: 1rem;
+  left: 50%;
+  position: absolute;
+  transform: translateX(-50%);
+  margin-top: 1rem;
+  cursor: pointer;
 }
-.ql-container{
-    background: white;
+.ql-container {
+  background: white;
 }
-.ql-toolbar{
-    background: white;
+.ql-toolbar {
+  background: white;
 }
